--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Changed Again Title</title>
   </head>
   <body>
-    
+
   </body>
 </html>
